add query repository, restructure file, add new shape action